# food_delivery_multiagent

./: README.md  pyproject.toml
host_agent/: .env  .gitignore  README.md  __main__.py  remote_agent_connection.py  routing_agent.py
restaurant_agent/: .env  __init__.py  __main__.py  db.py  restaurant_agent.py  restaurant_mcp.py  resturant_executor.py  test_restaurant_tools.py
rider_agent/: .env  __init__.py  __main__.py  google_map_test.py  ride_executor.py  rider_agent.py  rider_mcp.py
